@@ -2759,12 +2759,15 @@ summary buffer."
 	     (progn
 	       (or how (setq how gnus-article-browse-delete-temp))
 	       (if (eq how 'ask)
-		   (let ((files (length gnus-article-browse-html-temp-list)))
-		     (gnus-y-or-n-p
-		      (if (= files 1)
-			  "Delete the temporary HTML file? "
-			(format "Delete all %s temporary HTML files? "
-				files))))
+		   (let* ((files (length gnus-article-browse-html-temp-list))
+			  (ans (gnus-y-or-n-p
+				(if (= files 1)
+				    "Delete the temporary HTML file? "
+				  (format
+				   "Delete all %s temporary HTML files? "
+				   files)))))
+		     (or ans
+			 (setq gnus-article-browse-html-temp-list nil)))
 		 how)))
     (dolist (file gnus-article-browse-html-temp-list)
       (cond ((file-directory-p file)
