@@ -1,3 +1,8 @@
+2012-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-art.el (gnus-article-browse-delete-temp-files): Never ask again
+	a user about whether to delete temp files if once a user answered as n.
+
 2012-09-25  Chong Yidong  <cyd@gnu.org>
 
 	* password-cache.el (password-read-and-add): Use a declare form to mark
